--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Error Report</h1>
+        <h1>Error Reporter</h1>
         <form id="errorForm">
             <div class="form-group">
                 <label for="errorTitle">Error Title</label>
