--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error Reporter</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: 'unsafe-inline' 'unsafe-eval' data: blob:;">
+    <title>Error Reporter app</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Google API Scripts -->
     <script src="https://apis.google.com/js/api.js"></script>
