--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <script>
         // Configuration from environment variables
         const CONFIG = {
-            apiKey: '{{GOOGLE_API_KEY}}',
-            clientId: '{{GOOGLE_CLIENT_ID}}',
-            spreadsheetId: '{{GOOGLE_SPREADSHEET_ID}}',
+            apiKey: 'AIzaSyB_ILfKUuYD7OUR7gWd3DxHSR-UQbw2toQ',
+            clientId: '162757731325-hbidlktgb1f2a0kbff95tbrjp807gspi.apps.googleusercontent.com',
+            spreadsheetId: '1MSwtFjeOUQk9yRGfi4SbotKj7Skht-UDNB76lBe--jI',
             sheetName: 'ErrorReports'
         };
     </script>
