--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: 'unsafe-inline' 'unsafe-eval' data: blob:; connect-src 'self' https://*.googleapis.com https://accounts.google.com; frame-src 'self' https://accounts.google.com;">
-    <title>Error Reporter app</title>
+    <title>Error Reporter app - zeo sec</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Google API Scripts -->
     <script src="https://apis.google.com/js/api.js"></script>
@@ -13,7 +13,7 @@
         // Configuration from environment variables
         const CONFIG = {
             apiKey: 'AIzaSyBm5d0kAq6o6OlMl28qXUc6DpeYrx67pF8',
-            clientId: '162757731325-hbidlktgb1f2a0kbff95tbrjp807gspi.apps.googleusercontent.com',
+            clientId: '162757731325-bmog2ls9sgt6ba7bfi2tjapckde2a5r0.apps.googleusercontent.com',
             spreadsheetId: '1MSwtFjeOUQk9yRGfi4SbotKj7Skht-UDNB76lBe--jI',
             sheetName: 'ErrorReports'
         };
